--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,13 +11,16 @@ html(lang="en")
     main 
         div#welcome
           form
-            input(type="text", placeholder="room name",required)
+            input(type="text", placeholder="room name", required)
             button Enter Room
         div#room
           h3 
           ul
-          form
-            input(type="text", placeholder="message",required)
+          form#name
+            input(type="text", placeholder="niackname", required)
+            button Save
+          form#msg
+            input(type="text", placeholder="message", required)
             button Send
       
     script(src="/socket.io/socket.io.js")
